--- a/Bracez/ui/editor/ProjectionDefinitionEditor.xib
+++ b/Bracez/ui/editor/ProjectionDefinitionEditor.xib
@@ -22,19 +22,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="494" height="330"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Tma-rC-YpN">
-                        <rect key="frame" x="130" y="289" width="344" height="21"/>
-                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="T46-b5-Dw4">
-                            <font key="font" usesAppearanceFont="YES"/>
-                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
-                        <connections>
-                            <binding destination="OOx-Cz-eMj" name="value" keyPath="selection.projectionName" id="Llc-Tq-yDh"/>
-                        </connections>
-                    </textField>
                     <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cpb-KQ-EYh">
-                        <rect key="frame" x="130" y="258" width="344" height="21"/>
+                        <rect key="frame" x="117" y="289" width="357" height="21"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="V8v-2L-jd9">
                             <font key="font" usesAppearanceFont="YES"/>
                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -44,16 +33,8 @@
                             <binding destination="OOx-Cz-eMj" name="value" keyPath="selection.rowSelector" id="aus-Wy-EOp"/>
                         </connections>
                     </textField>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Lv5-4Q-MvG">
-                        <rect key="frame" x="18" y="291" width="106" height="16"/>
-                        <textFieldCell key="cell" lineBreakMode="clipping" title="Projection name:" id="QZO-d5-X2s">
-                            <font key="font" metaFont="system"/>
-                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
-                    </textField>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="7FB-6T-toI">
-                        <rect key="frame" x="166" y="187" width="74" height="16"/>
+                        <rect key="frame" x="166" y="218" width="74" height="16"/>
                         <textFieldCell key="cell" lineBreakMode="clipping" title="Field name:" id="6JU-4O-DAy">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -61,7 +42,7 @@
                         </textFieldCell>
                     </textField>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cwx-SC-qj2">
-                        <rect key="frame" x="166" y="156" width="74" height="16"/>
+                        <rect key="frame" x="166" y="187" width="74" height="16"/>
                         <textFieldCell key="cell" lineBreakMode="clipping" title="Expression:" id="5C1-yO-4tP">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -69,7 +50,7 @@
                         </textFieldCell>
                     </textField>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="rXQ-gn-wIP">
-                        <rect key="frame" x="31" y="260" width="93" height="16"/>
+                        <rect key="frame" x="18" y="291" width="93" height="16"/>
                         <textFieldCell key="cell" lineBreakMode="clipping" title="Rows selector:" id="jP2-aE-HfQ">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -77,13 +58,13 @@
                         </textFieldCell>
                     </textField>
                     <scrollView autohidesScrollers="YES" horizontalLineScroll="24" horizontalPageScroll="10" verticalLineScroll="24" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cZv-Bj-Mic">
-                        <rect key="frame" x="20" y="83" width="140" height="120"/>
+                        <rect key="frame" x="20" y="83" width="140" height="151"/>
                         <clipView key="contentView" id="U8l-Ze-JYN">
-                            <rect key="frame" x="1" y="1" width="138" height="118"/>
+                            <rect key="frame" x="1" y="1" width="138" height="149"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" rowSizeStyle="automatic" viewBased="YES" id="VsV-il-xYi">
-                                    <rect key="frame" x="0.0" y="0.0" width="138" height="118"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="138" height="149"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <size key="intercellSpacing" width="17" height="0.0"/>
                                     <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -136,7 +117,7 @@
                             <constraint firstAttribute="width" constant="140" id="jDq-Gh-n4x"/>
                         </constraints>
                         <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="OfH-fk-byr">
-                            <rect key="frame" x="1" y="115" width="138" height="16"/>
+                            <rect key="frame" x="1" y="103" width="138" height="16"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="UOG-JB-uuZ">
@@ -145,7 +126,7 @@
                         </scroller>
                     </scrollView>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0YE-34-KFF">
-                        <rect key="frame" x="18" y="205" width="35" height="14"/>
+                        <rect key="frame" x="18" y="236" width="35" height="14"/>
                         <textFieldCell key="cell" controlSize="small" lineBreakMode="clipping" title="Fields" id="ZfU-Kp-lcE">
                             <font key="font" metaFont="smallSystem"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -153,7 +134,7 @@
                         </textFieldCell>
                     </textField>
                     <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Ae7-kP-k0J">
-                        <rect key="frame" x="246" y="185" width="228" height="21"/>
+                        <rect key="frame" x="246" y="216" width="228" height="21"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="Z6m-Ec-XPR">
                             <font key="font" usesAppearanceFont="YES"/>
                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -168,7 +149,7 @@
                         </connections>
                     </textField>
                     <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="uxG-oc-GLX">
-                        <rect key="frame" x="246" y="154" width="228" height="21"/>
+                        <rect key="frame" x="246" y="185" width="228" height="21"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="K7j-HU-BGT">
                             <font key="font" usesAppearanceFont="YES"/>
                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -255,9 +236,9 @@ Gw
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Tma-rC-YpN" firstAttribute="leading" secondItem="Lv5-4Q-MvG" secondAttribute="trailing" constant="8" symbolic="YES" id="2d4-fA-9FW"/>
                     <constraint firstItem="7FB-6T-toI" firstAttribute="top" secondItem="cZv-Bj-Mic" secondAttribute="top" id="5Hc-CY-PZF"/>
                     <constraint firstItem="zJY-FI-mK4" firstAttribute="leading" secondItem="hGM-ir-eom" secondAttribute="trailing" constant="12" symbolic="YES" id="6Jo-gr-GFM"/>
+                    <constraint firstItem="rXQ-gn-wIP" firstAttribute="leading" secondItem="se5-gp-TjO" secondAttribute="leading" constant="20" symbolic="YES" id="7eW-ql-XB0"/>
                     <constraint firstItem="Voj-IW-G1c" firstAttribute="trailing" secondItem="cZv-Bj-Mic" secondAttribute="trailing" id="8Up-JP-njt"/>
                     <constraint firstItem="Ae7-kP-k0J" firstAttribute="firstBaseline" secondItem="7FB-6T-toI" secondAttribute="firstBaseline" id="9cX-g7-lir"/>
                     <constraint firstItem="Voj-IW-G1c" firstAttribute="top" secondItem="cZv-Bj-Mic" secondAttribute="bottom" constant="-1" id="Ahy-aX-GwX"/>
@@ -267,27 +248,22 @@ Gw
                     <constraint firstAttribute="bottom" secondItem="zJY-FI-mK4" secondAttribute="bottom" constant="20" symbolic="YES" id="Lqd-he-UKB"/>
                     <constraint firstItem="cZv-Bj-Mic" firstAttribute="leading" secondItem="se5-gp-TjO" secondAttribute="leading" constant="20" symbolic="YES" id="Mtq-J2-QrP"/>
                     <constraint firstItem="Voj-IW-G1c" firstAttribute="leading" secondItem="cZv-Bj-Mic" secondAttribute="leading" id="N9I-aj-wNx"/>
-                    <constraint firstItem="Tma-rC-YpN" firstAttribute="top" secondItem="se5-gp-TjO" secondAttribute="top" constant="20" symbolic="YES" id="ORO-7f-rua"/>
                     <constraint firstItem="uxG-oc-GLX" firstAttribute="leading" secondItem="Ae7-kP-k0J" secondAttribute="leading" id="P2N-ws-zqs"/>
-                    <constraint firstAttribute="trailing" secondItem="Tma-rC-YpN" secondAttribute="trailing" constant="20" symbolic="YES" id="Q6s-KI-nra"/>
-                    <constraint firstItem="cpb-KQ-EYh" firstAttribute="top" secondItem="Tma-rC-YpN" secondAttribute="bottom" constant="10" symbolic="YES" id="Smc-iQ-dwg"/>
+                    <constraint firstItem="cpb-KQ-EYh" firstAttribute="top" secondItem="se5-gp-TjO" secondAttribute="top" constant="20" symbolic="YES" id="PYe-Rj-Wj8"/>
                     <constraint firstItem="uxG-oc-GLX" firstAttribute="leading" secondItem="cwx-SC-qj2" secondAttribute="trailing" constant="8" symbolic="YES" id="ZYt-5E-N1b"/>
                     <constraint firstAttribute="trailing" secondItem="uxG-oc-GLX" secondAttribute="trailing" constant="20" symbolic="YES" id="aOg-IY-chB"/>
+                    <constraint firstItem="cpb-KQ-EYh" firstAttribute="leading" secondItem="rXQ-gn-wIP" secondAttribute="trailing" constant="8" symbolic="YES" id="cRF-La-UQo"/>
                     <constraint firstAttribute="trailing" secondItem="Ae7-kP-k0J" secondAttribute="trailing" constant="20" symbolic="YES" id="cyL-Lc-e2J"/>
                     <constraint firstItem="zJY-FI-mK4" firstAttribute="centerY" secondItem="hGM-ir-eom" secondAttribute="centerY" id="hcY-bL-M6h"/>
-                    <constraint firstItem="cpb-KQ-EYh" firstAttribute="leading" secondItem="Tma-rC-YpN" secondAttribute="leading" id="i28-um-cKL"/>
                     <constraint firstItem="cZv-Bj-Mic" firstAttribute="leading" secondItem="0YE-34-KFF" secondAttribute="leading" id="j8Y-BK-47r"/>
                     <constraint firstItem="uxG-oc-GLX" firstAttribute="firstBaseline" secondItem="cwx-SC-qj2" secondAttribute="firstBaseline" id="jbY-vO-m2o"/>
                     <constraint firstItem="7FB-6T-toI" firstAttribute="leading" secondItem="cZv-Bj-Mic" secondAttribute="trailing" constant="8" symbolic="YES" id="ncI-RY-jd6"/>
-                    <constraint firstItem="Lv5-4Q-MvG" firstAttribute="leading" secondItem="se5-gp-TjO" secondAttribute="leading" constant="20" symbolic="YES" id="o1i-qU-W9R"/>
                     <constraint firstItem="zJY-FI-mK4" firstAttribute="width" secondItem="hGM-ir-eom" secondAttribute="width" id="p42-u9-xsd"/>
-                    <constraint firstItem="Tma-rC-YpN" firstAttribute="firstBaseline" secondItem="Lv5-4Q-MvG" secondAttribute="firstBaseline" id="pnV-TD-u3p"/>
                     <constraint firstAttribute="trailing" secondItem="cpb-KQ-EYh" secondAttribute="trailing" constant="20" symbolic="YES" id="rB6-69-YcG"/>
                     <constraint firstAttribute="trailing" secondItem="zJY-FI-mK4" secondAttribute="trailing" constant="20" symbolic="YES" id="sTT-Ca-9JF"/>
                     <constraint firstItem="cZv-Bj-Mic" firstAttribute="top" secondItem="0YE-34-KFF" secondAttribute="bottom" constant="2" id="tiQ-Rq-LgR"/>
                     <constraint firstItem="uxG-oc-GLX" firstAttribute="top" secondItem="Ae7-kP-k0J" secondAttribute="bottom" constant="10" symbolic="YES" id="wcv-RG-pmb"/>
                     <constraint firstItem="cpb-KQ-EYh" firstAttribute="firstBaseline" secondItem="rXQ-gn-wIP" secondAttribute="firstBaseline" id="zDc-SL-nAy"/>
-                    <constraint firstItem="rXQ-gn-wIP" firstAttribute="trailing" secondItem="Lv5-4Q-MvG" secondAttribute="trailing" id="zcB-KL-bdf"/>
                     <constraint firstItem="0YE-34-KFF" firstAttribute="top" secondItem="rXQ-gn-wIP" secondAttribute="bottom" constant="41" id="zmE-l0-yEf"/>
                 </constraints>
             </view>
